Set font to be uniform on all platforms (Rubik from GFonts)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,5 @@
-.background {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  z-index: 0;
+body {
+    font-family: 'Rubik', sans-serif;
 }
 
 #particles-js {
