--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,11 +3,29 @@ body {
 }
 
 #particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    z-index: 100;
+    padding: 0px;
+    margin: 0px;
 }
 
+.jumbotron {
+    background: none !important;
+}
+
+#inside {
+    position: absolute;
+    z-index: 10;
+    margin: 0 auto;
+}
+
+canvas {
+    display: block;
+    vertical-align: bottom;
+}
