--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    z-index: 100;
+    z-index: 50;
     padding: 0px;
     margin: 0px;
 }
@@ -32,6 +32,10 @@ canvas {
     vertical-align: bottom;
 }
 
-.darkmode-layer, .darkmode-toggle  {
-    z-index: 120;
+.darkmode-toggle  {
+    z-index: 60;
+}
+
+.darkmode--activated .darkmode-text {
+    color: #ffffff;
 }
