--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button {
+    @apply rounded bg-blue-500 px-3 py-2 my-2 text-white table
+}
