--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,6 @@
-/* Write your global styles here, in PostCSS syntax */
+/*Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap'); /* Write your global styles here, in PostCSS syntax */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
