Fill CTA section and start app jumper

--- a/src/app.css
+++ b/src/app.css
@@ -18,5 +18,17 @@
 }
 
 .section-heading {
-    @apply sm:text-4xl md:text-5xl lg:text-6xl text-3xl font-display mb-8
+    @apply sm:text-4xl md:text-5xl lg:text-6xl text-3xl font-display mb-8 font-medium
+}
+
+.section {
+    @apply py-12
+}
+
+.cta {
+
+}
+
+.cta-heading {
+    @apply sm:text-3xl md:text-4xl lg:text-5xl text-2xl font-display mb-4 font-semibold
 }
