--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 @tailwind utilities;
 
 .button {
-    @apply rounded bg-blue-500 px-3 py-2 my-2 text-white table
+    @apply rounded bg-blue-500 px-3 py-2 my-2 text-white table hover:bg-blue-400 transition
 }
 
 /*Basic container that restricts width*/
