--- a/src/app.css
+++ b/src/app.css
@@ -15,6 +15,10 @@
     @apply max-w-7xl mx-auto px-2 sm:px-6 lg:px-8 container
 }
 
+.what-i-do-card {
+    @apply rounded border bg-slate-100 p-4 dark:text-white dark:bg-slate-800 hover:bg-gradient-to-tr shadow-md hover:from-[#7BC6CC] hover:to-[#BE93C5] hover:scale-110 transition-all hover:text-white hover:bg-animate
+}
+
 /*Page wrapper to auto set padding & background colors for darkmode*/
 /*It is forced to be at least 100vh to make sure there's no gaps between it and the bottom*/
 .page-wrapper {
